--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/single/player-selection-single.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/single/player-selection-single.component.scss
@@ -1,7 +1,8 @@
 @import '/src/variables.scss';
 
 mat-form-field {
-  width: 100%;
+  display: block;
+  max-width: 95%; // TODO: This is a hack to avoid the negative margin hiding in here from generating horizontal scroll bars.
 }
 
 // the chip is clickable
