--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
@@ -37,6 +37,7 @@
   >
   <span class="icon-spacer"></span>
   <player-selection-single
+    [displayInSingleLine]="true"
     [(lookupType)]="lookupType"
     [(lookupList)]="lookupList"
     (lookupListChange)="lookupChange()"
