--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/single/player-selection-single.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/single/player-selection-single.component.html
@@ -1,4 +1,5 @@
 <mat-button-toggle-group
+  [class.fill-button-toggle-group]="!displayInSingleLine"
   aria-label="ID Type"
   name="lookupType"
   #lookupTypeGroup="matButtonToggleGroup"
