--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -6,11 +6,13 @@
       (selectedTabChange)="matTabSelectionChange($event.index)"
     >
       <mat-tab label="Player Selection">
-        <player-selection-single
-          [allowSelection]="true"
-          (found)="onPlayerIdentitiesChange([$event])"
-          (selected)="playerIdentitySelected($event)"
-        ></player-selection-single>
+        <mat-card>
+          <player-selection-single
+            [allowSelection]="true"
+            (found)="onPlayerIdentitiesChange([$event])"
+            (selected)="playerIdentitySelected($event)"
+          ></player-selection-single>
+        </mat-card>
       </mat-tab>
       <mat-tab *ngIf="!disableLspGroupSelection" label="LSP Group Selection">
         <apollo-lsp-group-selection [(ngModel)]="selectedLspGroup"></apollo-lsp-group-selection>
