--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -6,11 +6,13 @@
       (selectedTabChange)="matTabSelectionChange($event.index)"
     >
       <mat-tab label="Player Selection">
-        <player-selection-bulk
-          [allowSelection]="true"
-          (found)="onPlayerIdentitiesChange($event)"
-          (selected)="playerIdentitySelected($event)"
-        ></player-selection-bulk>
+        <mat-card>
+          <player-selection-bulk
+            [allowSelection]="true"
+            (found)="onPlayerIdentitiesChange($event)"
+            (selected)="playerIdentitySelected($event)"
+          ></player-selection-bulk>
+        </mat-card>
       </mat-tab>
       <mat-tab *ngIf="!disableLspGroupSelection" label="LSP Group Selection">
         <sunrise-lsp-group-selection [(ngModel)]="selectedLspGroup"></sunrise-lsp-group-selection>
