--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/gift-history.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/gift-history.component.scss
@@ -1,6 +1,5 @@
 @import '/src/styles/mixins/variables.scss';
 
-.navbar-button-active {
-  background-color: mat-color($app-accent);
-  color: #fff;
+.mat-stroked-button {
+  border-color: rgba(mat-color($app-background, default-contrast), .333);
 }
