--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
@@ -5,7 +5,7 @@
     [routerLink]="sunriseRouterLink"
     [queryParams]="{ lookupType: lookupType, lookupName: lookupName }"
     mat-button
-    routerLinkActive="navbar-button-active"
+    routerLinkActive="mat-stroked-button"
     >Sunrise</a
   >
   <a
@@ -14,7 +14,7 @@
     [routerLink]="opusRouterLink"
     [queryParams]="{ lookupType: lookupType, lookupName: lookupName }"
     mat-button
-    routerLinkActive="navbar-button-active"
+    routerLinkActive="mat-stroked-button"
     >Opus</a
   >
   <a
@@ -23,7 +23,7 @@
     [routerLink]="apolloRouterLink"
     [queryParams]="{ lookupType: lookupType, lookupName: lookupName }"
     mat-button
-    routerLinkActive="navbar-button-active"
+    routerLinkActive="mat-stroked-button"
     >Apollo</a
   >
   <a
@@ -32,7 +32,7 @@
     [routerLink]="gravityRouterLink"
     [queryParams]="{ lookupType: lookupType, lookupName: lookupName }"
     mat-button
-    routerLinkActive="navbar-button-active"
+    routerLinkActive="mat-stroked-button"
     >Gravity</a
   >
   <span class="icon-spacer"></span>
