--- a/StewardClient/src/app/shared/views/credit-history/titles/sunrise/sunrise-credit-history.component.html
+++ b/StewardClient/src/app/shared/views/credit-history/titles/sunrise/sunrise-credit-history.component.html
@@ -10,46 +10,60 @@
       ></error-spinner>
     </h2>
     <ng-container *ngIf="!isLoading && !loadError; else failstate">
-      <table mat-table [dataSource]="creditHistory">
-        <ng-container matColumnDef="eventTimestampUtc">
-          <th mat-header-cell *matHeaderCellDef>Timestamp</th>
-          <td mat-cell *matCellDef="let entry">
-            {{ entry.eventTimestampUtc | date: 'short' }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="deviceType">
-          <th mat-header-cell *matHeaderCellDef>Device Type</th>
-          <td mat-cell *matCellDef="let entry">
-            {{ entry.deviceType | humanize }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="creditsAfter">
-          <th mat-header-cell *matHeaderCellDef>Credit Total</th>
-          <td mat-cell *matCellDef="let entry">
-            {{ entry.creditsAfter | bignumber }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="creditAmount">
-          <th mat-header-cell *matHeaderCellDef>Credit Change</th>
-          <td mat-cell *matCellDef="let entry">
-            {{ entry.creditAmount | bignumber }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="sceneName">
-          <th mat-header-cell *matHeaderCellDef>Scene Name</th>
-          <td mat-cell *matCellDef="let entry">
-            {{ entry.sceneName | humanize }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="totalXp">
-          <th mat-header-cell *matHeaderCellDef>Total XP</th>
-          <td mat-cell *matCellDef="let entry">
-            {{ entry.totalXp | bignumber }}
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let element; columns: columnsToDisplay"></tr>
-      </table>
+      <div class="table-container">
+        <table mat-table [dataSource]="creditHistory">
+          <ng-container matColumnDef="eventTimestampUtc">
+            <th mat-header-cell *matHeaderCellDef>Timestamp</th>
+            <td mat-cell *matCellDef="let entry">
+              {{ entry.eventTimestampUtc | date: 'short' }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="deviceType">
+            <th mat-header-cell *matHeaderCellDef>Device Type</th>
+            <td mat-cell *matCellDef="let entry">
+              {{ entry.deviceType | humanize }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="creditsAfter">
+            <th mat-header-cell *matHeaderCellDef>Credit Total</th>
+            <td mat-cell *matCellDef="let entry">
+              {{ entry.creditsAfter | bignumber }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="creditAmount">
+            <th mat-header-cell *matHeaderCellDef>Credit Change</th>
+            <td mat-cell *matCellDef="let entry">
+              {{ entry.creditAmount | bignumber }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="sceneName">
+            <th mat-header-cell *matHeaderCellDef>Scene Name</th>
+            <td mat-cell *matCellDef="let entry">
+              {{ entry.sceneName | humanize }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="totalXp">
+            <th mat-header-cell *matHeaderCellDef>Total XP</th>
+            <td mat-cell *matCellDef="let entry">
+              {{ entry.totalXp | bignumber }}
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+          <tr mat-row *matRowDef="let element; columns: columnsToDisplay"></tr>
+        </table>
+      </div>
+
+      <div class="load-more-container">
+        <button
+          mat-raised-button
+          color="primary"
+          *ngIf="showLoadMore && !loadingMore"
+          (click)="loadMoreCreditUpdates()"
+        >
+          Load More
+        </button>
+        <mat-progress-spinner *ngIf="loadingMore" mode="indeterminate"></mat-progress-spinner>
+      </div>
     </ng-container>
   </mat-card-content>
 </mat-card>
