--- a/StewardClient/src/app/shared/views/credit-history/titles/sunrise/sunrise-credit-history.component.scss
+++ b/StewardClient/src/app/shared/views/credit-history/titles/sunrise/sunrise-credit-history.component.scss
@@ -1,3 +1,26 @@
-table {
+.table-container {
   width: 100%;
+  max-height: 500px;
+  overflow: auto;
+
+  table {
+    width: 100%;
+  }
+}
+
+.load-more-container {
+  width: 100%;
+
+  button {
+    display: block;
+    margin: auto;
+    margin-top: 20px;
+    max-width: 200px;
+    width: 100%;
+  }
+
+  mat-progress-spinner {
+    display: block;
+    margin: auto;
+  }
 }
