--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.scss
@@ -23,5 +23,5 @@
 }
 
 .mat-stroked-button {
-  border-color: rgba(mat-color($app-background, default-contrast), .333);
+  border-color: rgba(mat-color($app-background, default-contrast), 0.333);
 }
