--- a/StewardClient/src/app/pages/navbar-app/components/navbar/navbar.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/navbar/navbar.component.scss
@@ -25,5 +25,5 @@ fa-icon {
 }
 
 .mat-stroked-button {
-  border-color: rgba(mat-color($app-primary, default-contrast), .333);
+  border-color: rgba(mat-color($app-primary, default-contrast), 0.333);
 }
