--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/user-banning.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/user-banning.component.scss
@@ -1,5 +1,5 @@
 @import '/src/styles/mixins/variables.scss';
 
 .mat-stroked-button {
-  border-color: rgba(mat-color($app-background, default-contrast), .333);
+  border-color: rgba(mat-color($app-background, default-contrast), 0.333);
 }
