--- a/StewardClient/src/app/shared/views/player-inventory-profiles/player-inventory-profiles-picker/player-inventory-profiles-picker.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory-profiles/player-inventory-profiles-picker/player-inventory-profiles-picker.component.html
@@ -11,6 +11,7 @@
     #chip="matChip"
     [value]="profile"
     (click)="chip.toggleSelected(true)"
+    [selected]="profile?.isCurrent"
   >
     <fa-icon [icon]="currentUserIcon" *ngIf="profile.isCurrent" matTooltip="User Active"></fa-icon>
     <fa-icon
