--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
@@ -1,23 +1,30 @@
 <div class="default-page-layout">
   <div class="default-page-layout-left">
-    <mat-card>
-      <player-selection-single
-        [allowSelection]="true"
-        (found)="onPlayerIdentityChange($event)"
-        (selected)="playerIdentitySelected($event)"
-      ></player-selection-single>
-    </mat-card>
+    <div class="player-selection-div">
+      <mat-card>
+        <player-selection-single
+          [allowSelection]="true"
+          (found)="onPlayerIdentityChange($event)"
+          (selected)="playerIdentitySelected($event)"
+        ></player-selection-single>
+      </mat-card>
+    </div>
 
     <div class="reference-inventory" *ngIf="selectedPlayerIdentity">
-      <gravity-player-inventory-profile-picker
-        [identity]="selectedPlayerIdentity"
-        [(profileId)]="selectedPlayerInventoryProfile"
-      ></gravity-player-inventory-profile-picker>
-      <gravity-player-inventory
-        [identity]="selectedPlayerIdentity"
-        [profileId]="selectedPlayerInventoryProfile"
-        (inventoryFound)="onInventoryFound($event)"
-      ></gravity-player-inventory>
+      <mat-card>
+        <gravity-player-inventory-profile-picker
+          [identity]="selectedPlayerIdentity"
+          [(profileId)]="selectedPlayerInventoryProfile"
+        ></gravity-player-inventory-profile-picker>
+
+        <div class="inventory-div">
+          <gravity-player-inventory
+            [identity]="selectedPlayerIdentity"
+            [profileId]="selectedPlayerInventoryProfile"
+            (inventoryFound)="onInventoryFound($event)"
+          ></gravity-player-inventory>
+        </div>
+      </mat-card>
     </div>
   </div>
 
