fix ticket sidebar

--- a/StewardClient/src/app/pages/ticket-app/pages/apollo/apollo.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/apollo/apollo.component.html
@@ -1,4 +1,4 @@
 <apollo-player-details [gamertag]="gamertag"></apollo-player-details>
-<quick-actions>
+<quick-actions class="top-spacing">
   <go-to-inventory-button [gameTitle]="gameTitle" [xuid]="xuid"></go-to-inventory-button>
 </quick-actions>
