Logging; wait for recheck auth

--- a/StewardClient/src/app/sidebars/profile/profile.component.html
+++ b/StewardClient/src/app/sidebars/profile/profile.component.html
@@ -3,4 +3,5 @@
 Email: {{ user?.emailAddress }}
 Role: {{ user?.role }}
 </pre>
+<button (click)="break()">Break Auth</button>
 <button (click)="logout()">Logout</button>
