low hanging fruit

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -180,7 +180,7 @@
       class="reset-state"
       mat-raised-button
       color="accent"
-      matTooltip="Reset the failed tool."
+      matTooltip="Reset gift basket."
       (click)="resetGiftBasketUI(true)"
       clickStop
     >
