--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/gravity/gravity-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/gravity/gravity-gift-history.component.html
@@ -1,12 +1,10 @@
 <div class="default-page-layout">
   <div class="default-page-layout-left">
-    <gravity-player-selection
-      [allowT10Id]="true"
-      [allowGroup]="false"
-      [(ngModel)]="selectedPlayerIdentities"
-      (ngModelChange)="onPlayerIdentitiesChange($event)"
-      (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
-    ></gravity-player-selection>
+    <player-selection-single
+      [allowSelection]="true"
+      (found)="onPlayerIdentityChange($event)"
+      (selected)="playerIdentitySelected($event)"
+    ></player-selection-single>
   </div>
 
   <div class="default-page-layout-right">
