--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/apollo/apollo-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/apollo/apollo-gift-history.component.html
@@ -8,7 +8,7 @@
       <mat-tab label="Player Selection">
         <player-selection-single
           [allowSelection]="true"
-          (found)="onPlayerIdentitiesChange([$event])"
+          (found)="onPlayerIdentityChange($event)"
           (selected)="playerIdentitySelected($event)"
         ></player-selection-single>
       </mat-tab>
