--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/sunrise/sunrise-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/sunrise/sunrise-gift-history.component.html
@@ -13,9 +13,7 @@
         ></player-selection-single>
       </mat-tab>
       <mat-tab label="LSP Group Selection">
-        <sunrise-lsp-group-selection
-          [(ngModel)]="selectedLspGroup"
-        ></sunrise-lsp-group-selection>
+        <sunrise-lsp-group-selection [(ngModel)]="selectedLspGroup"></sunrise-lsp-group-selection>
       </mat-tab>
     </mat-tab-group>
   </div>
