Sunrise ban lookup conversion

--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.html
@@ -32,6 +32,8 @@
     >
       <span>{{ identity.query[this.lookupType] }}</span>
 
+      <ng-template [ngTemplateOutlet]="templateRef" [ngTemplateOutletContext]="{ $implicit: identity, identity: identity }"></ng-template>
+
       <error-spinner
         [isActive]="!identity.extra"
         [error]="identity.extra?.isInvalid ? identity : undefined"
