--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
@@ -1,25 +1,25 @@
 <div class="default-page-layout">
   <div class="default-page-layout-left">
-    <apollo-player-selection
-      #playerSelection
-      [allowT10Id]="false"
-      [allowGroup]="false"
-      [formControl]="formControls.playerIdentities"
-    >
-      <player-selection-chip-list
-        [playerSelection]="playerSelection"
-        [identities]="playerSelection.playerIdentitiesFull"
-      >
-        <ng-template let-identity>
-          <player-selection-chip [playerSelection]="playerSelection" [identity]="identity">
-            <ban-chip-icon
-              [identity]="identity"
-              [banSummary]="summaryLookup[identity.xuid]"
-            ></ban-chip-icon>
-          </player-selection-chip>
-        </ng-template>
-      </player-selection-chip-list>
-    </apollo-player-selection>
+    <player-selection-bulk
+      [allowSelection]="true"
+      (found)="onPlayerIdentitiesChange($event)"
+      (selected)="playerIdentitySelected($event)">
+      <ng-template let-identity>
+        <ban-chip-icon
+          *ngIf="identity?.extra?.hasApollo"
+          [identity]="identity.apollo"
+          [banSummary]="summaryLookup[identity.apollo.xuid]"
+        ></ban-chip-icon>
+      </ng-template>
+    </player-selection-bulk>
+    <div class="bottom">
+      <ng-container *ngFor="let xuid of bannedXuids">
+        <apollo-ban-history
+          [xuid]="xuid"
+          [hidden]="xuid !== selectedPlayer?.xuid"
+        ></apollo-ban-history>
+      </ng-container>
+    </div>
   </div>
 
   <div class="default-page-layout-right">
