--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.html
@@ -32,7 +32,10 @@
     >
       <span>{{ identity.query[this.lookupType] }}</span>
 
-      <ng-template [ngTemplateOutlet]="templateRef" [ngTemplateOutletContext]="{ $implicit: identity, identity: identity }"></ng-template>
+      <ng-template
+        [ngTemplateOutlet]="templateRef"
+        [ngTemplateOutletContext]="{ $implicit: identity, identity: identity }"
+      ></ng-template>
 
       <error-spinner
         [isActive]="!identity.extra"
