moved banning to use background processing

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gifting-result/gifting-result.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gifting-result/gifting-result.component.html
@@ -23,6 +23,7 @@
   color="primary"
   matTooltip="Download the gifting results."
   [downloadCsv]="giftingCsvData"
+  filname="GiftingResults"
 >
   Download results
 </button>
