--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
@@ -34,20 +34,53 @@
   <div class="default-page-layout-right">
     <mat-card>
       <mat-card-content>
-        <form [formGroup]="formGroup">
-          <ban-options [formControl]="formControls.banOptions"></ban-options>
-          <verify-action-button
-            #submitButton
-            [action]="submit"
-            [alwaysShow]="true"
-            [canSubmit]="formGroup.valid"
-            [canSubmitDisabledReason]="'Form is invalid'"
-            checkboxText="Check to verify ban"
-          >
-            Submit ban
-          </verify-action-button>
-        </form>
+        <ng-container *ngIf="!isLoading && !loadError; else failState">
+          <ng-container *ngIf="!banResults; else banResultsState">
+            <form [formGroup]="formGroup">
+              <ban-options [formControl]="formControls.banOptions"></ban-options>
+              <verify-action-button
+                #submitButton
+                [action]="submit"
+                [alwaysShow]="true"
+                [canSubmit]="formGroup.valid"
+                [canSubmitDisabledReason]="'Form is invalid'"
+                checkboxText="Check to verify ban"
+              >
+                Submit ban
+              </verify-action-button>
+            </form>
+          </ng-container>
+        </ng-container>
       </mat-card-content>
     </mat-card>
   </div>
 </div>
+
+<ng-template #failState>
+  <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
+  <json-dump *ngIf="loadError" [input]="loadError">Failure occured.</json-dump>
+  <button
+    *ngIf="loadError"
+    class="reset-state"
+    mat-raised-button
+    color="accent"
+    matTooltip="Reset the failed tool."
+    (click)="resetGiftBasketUI()"
+  >
+    Reset Tool
+  </button>
+</ng-template>
+
+<ng-template #banResultsState>
+  <ban-results [banResults]="banResults"></ban-results>
+  <button
+    class="reset-state"
+    mat-raised-button
+    color="accent"
+    matTooltip="Send another ban."
+    (click)="resetBanningToolUI(true)"
+    clickStop
+  >
+    Send another ban
+  </button>
+</ng-template>
