--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.scss
@@ -3,6 +3,12 @@ verify-action-button {
   display: block;
 }
 
+.bottom {
+  flex-grow: 1;
+  display: inline-block;
+  margin-top: 20px;
+}
+
 @media screen and (max-width: 1000px) {
   .default-page-layout-left {
     max-width: unset;
