Fix gifting; Emit found event on player chip removal

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -10,7 +10,7 @@
           <mat-card>
             <player-selection-single
               [allowSelection]="true"
-              (found)="onPlayerIdentitiesChange([$event])"
+              (found)="onPlayerIdentityChange($event)"
               (selected)="playerIdentitySelected($event)"
             ></player-selection-single>
           </mat-card>
