--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
@@ -57,6 +57,7 @@
     color="accent"
     matTooltip="Reset the failed tool."
     (click)="resetBanningToolUI()"
+    clickStop
   >
     Reset Tool
   </button>
