--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
@@ -67,6 +67,7 @@
     color="accent"
     matTooltip="Reset the failed tool."
     (click)="resetBanningToolUI()"
+    clickStop
   >
     Reset Tool
   </button>
