Correct banning tool validation

--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
@@ -34,7 +34,7 @@
             #submitButton
             [action]="submit"
             [alwaysShow]="true"
-            [canSubmit]="formGroup.valid"
+            [canSubmit]="canBan()"
             [canSubmitDisabledReason]="'Form is invalid'"
             checkboxText="Check to verify ban"
           >
