--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
@@ -34,7 +34,7 @@
             #submitButton
             [action]="submit || 'testing'"
             [alwaysShow]="true"
-            [canSubmit]="formGroup.valid"
+            [canSubmit]="canBan()"
             [canSubmitDisabledReason]="'Form is invalid'"
             checkboxText="Check to verify ban"
           >
