Add left-side card to gift history pages

--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/gravity/gravity-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/gravity/gravity-gift-history.component.html
@@ -1,10 +1,12 @@
 <div class="default-page-layout">
   <div class="default-page-layout-left">
-    <player-selection-single
-      [allowSelection]="true"
-      (found)="onPlayerIdentityChange($event)"
-      (selected)="playerIdentitySelected($event)"
-    ></player-selection-single>
+    <mat-card>
+      <player-selection-single
+        [allowSelection]="true"
+        (found)="onPlayerIdentityChange($event)"
+        (selected)="playerIdentitySelected($event)"
+      ></player-selection-single>
+    </mat-card>
   </div>
 
   <div class="default-page-layout-right">
