--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/gravity/gravity-user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/gravity/gravity-user-details.component.html
@@ -6,11 +6,6 @@
   </h1>
   <section>
     <mat-tab-group animationDuration="0ms">
-      <mat-tab label="User Details">
-        <div class="tab-container">
-          <h2>TODO</h2>
-        </div>
-      </mat-tab>
       <mat-tab label="Inventory">
         <div class="tab-container">
           <gravity-player-inventory-profile-picker
@@ -34,7 +29,8 @@
 </ng-container>
 
 <ng-template #noIdentity>
-  <h1>Finding {{ lookupName }} by {{ lookupType | humanize }}</h1>
+  <h1 *ngIf="lookupName">Finding {{ lookupName }} by {{ lookupType | humanize }}</h1>
+  <h1 *ngIf="!lookupName">Waiting for {{ lookupType | humanize }}</h1>
   <ng-container *ngIf="identity?.error">
     <hr />
     <h2>Request failed</h2>
