--- a/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.html
@@ -16,6 +16,7 @@
       <ng-container matColumnDef="description">
         <td mat-cell *matCellDef="let item">
           {{ item.description }}
+          <span class="item-id-text" *ngIf="item.id >= 0">[{{ item.id }}]</span>
         </td>
       </ng-container>
       <tr mat-row *matRowDef="let row; columns: ['quantity', 'description', 'acquisitionUtc']"></tr>
