--- a/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.scss
+++ b/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/mixins/variables.scss';
+
 table {
   width: 100%;
 }
@@ -5,6 +7,15 @@ table {
 mat-panel-title {
   max-width: 150px;
   width: 100%;
+}
+
+.item-id-text {
+  color: mat-color($app-primary);
+}
+
+.mat-column-quantity {
+  padding-left: 0px !important;
+  padding-right: 2em !important;
 }
 
 @media screen and (max-width: 400px) {
